# propresenter-speech

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.amd64  LICENSE  README.md  build-docker.sh  pyproject.toml  speech_accuracy_Drive_20260524_055154.jsonl  speech_accuracy_Drive_20260524_061512.jsonl
docs/: speech-accuracy.md
src/propresenter_speech/: __init__.py  audio_capture.py  audio_pipeline.py  command_parser.py  file_pipeline.py  follow_enhanced_controller.py  main.py  modes.py  predictor.py  slide_embedder.py  slide_follower.py  speech_controller.py  transcriber.py  transcriber_mlx.py  whisper_predictor.py
src/propresenter_speech/handlers/: __init__.py  base.py  follow.py  follow_enhanced.py  follow_enhanced_plus.py  follow_semantic_audio.py  follow_semantic_words.py  follow_trigger_words.py  presentation.py
src/propresenter_speech/predictors/: __init__.py  base.py  mert.py  wav2vec.py  wav2vec_alt.py  whisper.py
src/propresenter_speech/separation/: __init__.py  base.py  demucs.py  demucs_mlx.py  factory.py
src/speech_accuracy/: __init__.py  evaluator.py  main.py  plot.py  plot_summary.py  run_eval.py  speech-accuracy.md  whisper_pairwise.py
tests/: test_accuracy_evaluator.py  test_audio_file_capture.py  test_audio_pipeline.py  test_command_parser.py  test_follow_enhanced_controller.py  test_handler_follow.py  test_handler_follow_enhanced.py  test_handler_follow_semantic_words.py  test_handler_follow_trigger_words.py  test_handler_presentation.py  test_integration_follow.py  test_separation.py  test_separation_mlx.py  test_slide_embedder.py  test_slide_follower.py  test_speech_controller.py  test_transcriber.py  test_transcriber_mlx.py  test_transcriber_performance.py  test_word_window_embedder.py
tools/: benchmark_all.py  benchmark_demucs.py  benchmark_demucs_mlx.py  benchmark_mert.py  benchmark_wav2vec2.py  benchmark_wav2vec2_alt.py  benchmark_whisper.py  benchmark_whisper_mlx.py  plot_summary.py  run_drive2_eval.py  run_eval.py  whisper_pairwise.py
