[tool.poetry]
name = "propresenter-speech"
version = "0.1.0"
description = "Voice-controlled slide advancement for ProPresenter using Whisper ASR"
authors = ["scaperoth@berkeley.edu"]
readme = "README.md"
packages = [{include = "propresenter_speech", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
faster-whisper = "*"
sounddevice = "*"
soundfile = "*"
numpy = ">=2.4"
requests = "*"
word2number = "*"
sentence-transformers = "^3.0"
propresenter-client = {path = "../propresenter-client", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "*"

[tool.poetry.scripts]
propresenter-speech = "propresenter_speech.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
