[tool.poetry]
name = "propresenter-speech"
version = "0.1.0"
description = "Voice-controlled slide advancement for ProPresenter using Whisper ASR"
authors = ["scaperoth@berkeley.edu"]
readme = "README.md"
packages = [
    {include = "propresenter_speech", from = "src"},
    {include = "speech_accuracy", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
faster-whisper = "*"
sounddevice = "*"
soundfile = "*"
numpy = ">=2.4"
requests = "*"
word2number = "*"
sentence-transformers = "^3.0"
tqdm = "*"
matplotlib = "*"
propresenter-client = {path = "../propresenter-client", develop = true}
torch = {version = "2.7.0", optional = true}
transformers = {version = ">=4.30", optional = true}
demucs = {version = "^4.0.1", optional = true}
torchaudio = {version = "2.7.0", optional = true}
demucs-mlx = {version = "^1.4.3", optional = true, markers = "platform_system == 'Darwin'"}
mlx-whisper = {version = "^0.4.3", optional = true, markers = "platform_system == 'Darwin'"}

[tool.poetry.extras]
torch = ["torch", "transformers"]
separation = ["demucs", "torchaudio", "torch"]
separation-mlx = ["demucs-mlx"]
whisper-mlx = ["mlx-whisper"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "*"

[tool.poetry.scripts]
propresenter-speech = "propresenter_speech.main:main"
speech-accuracy = "speech_accuracy.main:speech_accuracy_main"
speech-accuracy-batch = "speech_accuracy.main:evaluate_all_main"
speech-accuracy-plot = "speech_accuracy.plot:plot_main"
speech-accuracy-run-eval = "speech_accuracy.run_eval:main"
speech-accuracy-pairwise = "speech_accuracy.whisper_pairwise:main"
speech-accuracy-plot-summary = "speech_accuracy.plot_summary:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
